# LLL_Compiler

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp
Execute/: CMakeLists.txt  command_processing.cpp  command_processing.hpp  commands.cpp  commands.hpp  directives.cpp  directives.hpp  end.cpp  end.hpp  execute.cpp  execute.hpp  flags.cpp  flags.hpp  process.cpp  process.hpp
Prepare/: CMakeLists.txt  convert.cpp  convert.hpp  help.cpp  help.hpp
